--- a/Lightning2/Tools/AssemblyInfo.tt
+++ b/Lightning2/Tools/AssemblyInfo.tt
@@ -10,34 +10,34 @@
 
 using System.Reflection;
 
-[assembly: AssemblyVersion("<#= LIGHTNING2_VERSION_MAJOR #>.<#= LIGHTNING2_VERSION_MINOR #>.<#= LIGHTNING2_VERSION_REVISION #>.<#= LIGHTNING2_VERSION_BUILD #>")]
-[assembly: AssemblyFileVersion("<#= LIGHTNING2_VERSION_MAJOR #>.<#= LIGHTNING2_VERSION_MINOR #>.<#= LIGHTNING2_VERSION_REVISION #>.<#= LIGHTNING2_VERSION_BUILD #>")]
-[assembly: AssemblyInformationalVersion("<#= LIGHTNING2_VERSION_EXTENDED_STRING #>")]
-[assembly: AssemblyTitle("Lightning2")]
+[assembly: AssemblyVersion("<#= LightningGL_VERSION_MAJOR #>.<#= LightningGL_VERSION_MINOR #>.<#= LightningGL_VERSION_REVISION #>.<#= LightningGL_VERSION_BUILD #>")]
+[assembly: AssemblyFileVersion("<#= LightningGL_VERSION_MAJOR #>.<#= LightningGL_VERSION_MINOR #>.<#= LightningGL_VERSION_REVISION #>.<#= LightningGL_VERSION_BUILD #>")]
+[assembly: AssemblyInformationalVersion("<#= LightningGL_VERSION_EXTENDED_STRING #>")]
+[assembly: AssemblyTitle("LightningGL")]
 
-namespace Lightning2
+namespace LightningGL
 {
 	public static class L2Version
 	{
-		public static int LIGHTNING2_VERSION_MAJOR = <#= LIGHTNING2_VERSION_MAJOR #>;
-		public static int LIGHTNING2_VERSION_MINOR = <#= LIGHTNING2_VERSION_MINOR #>; 
-		public static int LIGHTNING2_VERSION_REVISION = <#= LIGHTNING2_VERSION_REVISION #>;
-		public static int LIGHTNING2_VERSION_BUILD = <#= LIGHTNING2_VERSION_BUILD #>;
+		public static int LightningGL_VERSION_MAJOR = <#= LightningGL_VERSION_MAJOR #>;
+		public static int LightningGL_VERSION_MINOR = <#= LightningGL_VERSION_MINOR #>; 
+		public static int LightningGL_VERSION_REVISION = <#= LightningGL_VERSION_REVISION #>;
+		public static int LightningGL_VERSION_BUILD = <#= LightningGL_VERSION_BUILD #>;
 
-		public static string LIGHTNING2_VERSION_STRING = "<#= LIGHTNING2_VERSION_STRING #>";
-		public static string LIGHTNING2_VERSION_EXTENDED_STRING = "<#= LIGHTNING2_VERSION_EXTENDED_STRING #>";
+		public static string LightningGL_VERSION_STRING = "<#= LightningGL_VERSION_STRING #>";
+		public static string LightningGL_VERSION_EXTENDED_STRING = "<#= LightningGL_VERSION_EXTENDED_STRING #>";
 	}
 }
 
 <#+
 
-public static int LIGHTNING2_VERSION_MAJOR = 1;
-public static int LIGHTNING2_VERSION_MINOR = 0; 
-public static int LIGHTNING2_VERSION_REVISION = 0;
-public static int LIGHTNING2_VERSION_BUILD = (DateTime.UtcNow - new DateTime(2022, 02, 26)).Days;
+public static int LightningGL_VERSION_MAJOR = 1;
+public static int LightningGL_VERSION_MINOR = 0; 
+public static int LightningGL_VERSION_REVISION = 0;
+public static int LightningGL_VERSION_BUILD = (DateTime.UtcNow - new DateTime(2022, 02, 26)).Days;
 
-public static string LIGHTNING2_VERSION_STRING = $"{LIGHTNING2_VERSION_MAJOR}.{LIGHTNING2_VERSION_MINOR}.{LIGHTNING2_VERSION_REVISION}";
-public static string LIGHTNING2_VERSION_EXTENDED_STRING = $"{LIGHTNING2_VERSION_STRING} build {LIGHTNING2_VERSION_BUILD}, built {DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")}";
+public static string LightningGL_VERSION_STRING = $"{LightningGL_VERSION_MAJOR}.{LightningGL_VERSION_MINOR}.{LightningGL_VERSION_REVISION}";
+public static string LightningGL_VERSION_EXTENDED_STRING = $"{LightningGL_VERSION_STRING} build {LightningGL_VERSION_BUILD}, built {DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")}";
 
 #>
 
