--- a/Lightning2/Tools/AssemblyInfo.tt
+++ b/Lightning2/Tools/AssemblyInfo.tt
@@ -10,34 +10,33 @@
 
 using System.Reflection;
 
-[assembly: AssemblyVersion("<#= LightningGL_VERSION_MAJOR #>.<#= LightningGL_VERSION_MINOR #>.<#= LightningGL_VERSION_REVISION #>.<#= LightningGL_VERSION_BUILD #>")]
-[assembly: AssemblyFileVersion("<#= LightningGL_VERSION_MAJOR #>.<#= LightningGL_VERSION_MINOR #>.<#= LightningGL_VERSION_REVISION #>.<#= LightningGL_VERSION_BUILD #>")]
-[assembly: AssemblyInformationalVersion("<#= LightningGL_VERSION_EXTENDED_STRING #>")]
-[assembly: AssemblyTitle("LightningGL")]
+[assembly: AssemblyVersion("<#= LIGHTNING_VERSION_MAJOR #>.<#= LIGHTNING_VERSION_MINOR #>.<#= LIGHTNING_VERSION_REVISION #>.<#= LIGHTNING_VERSION_BUILD #>")]
+[assembly: AssemblyFileVersion("<#= LIGHTNING_VERSION_MAJOR #>.<#= LIGHTNING_VERSION_MINOR #>.<#= LIGHTNING_VERSION_REVISION #>.<#= LIGHTNING_VERSION_BUILD #>")]
+[assembly: AssemblyInformationalVersion("<#= LIGHTNING_VERSION_EXTENDED_STRING #>")]
+[assembly: AssemblyTitle("Lightning Graphics Library")]
 
 namespace LightningGL
 {
 	public static class L2Version
 	{
-		public static int LightningGL_VERSION_MAJOR = <#= LightningGL_VERSION_MAJOR #>;
-		public static int LightningGL_VERSION_MINOR = <#= LightningGL_VERSION_MINOR #>; 
-		public static int LightningGL_VERSION_REVISION = <#= LightningGL_VERSION_REVISION #>;
-		public static int LightningGL_VERSION_BUILD = <#= LightningGL_VERSION_BUILD #>;
+		public static int LIGHTNING_VERSION_MAJOR = <#= LIGHTNING_VERSION_MAJOR #>;
+		public static int LIGHTNING_VERSION_MINOR = <#= LIGHTNING_VERSION_MINOR #>; 
+		public static int LIGHTNING_VERSION_REVISION = <#= LIGHTNING_VERSION_REVISION #>;
+		public static int LIGHTNING_VERSION_BUILD = <#= LIGHTNING_VERSION_BUILD #>;
 
-		public static string LightningGL_VERSION_STRING = "<#= LightningGL_VERSION_STRING #>";
-		public static string LightningGL_VERSION_EXTENDED_STRING = "<#= LightningGL_VERSION_EXTENDED_STRING #>";
+		public static string LIGHTNING_VERSION_STRING = "<#= LIGHTNING_VERSION_STRING #>";
+		public static string LIGHTNING_VERSION_EXTENDED_STRING = "<#= LIGHTNING_VERSION_EXTENDED_STRING #>";
 	}
 }
 
 <#+
 
-public static int LightningGL_VERSION_MAJOR = 1;
-public static int LightningGL_VERSION_MINOR = 0; 
-public static int LightningGL_VERSION_REVISION = 0;
-public static int LightningGL_VERSION_BUILD = (DateTime.UtcNow - new DateTime(2022, 02, 26)).Days;
-
-public static string LightningGL_VERSION_STRING = $"{LightningGL_VERSION_MAJOR}.{LightningGL_VERSION_MINOR}.{LightningGL_VERSION_REVISION}";
-public static string LightningGL_VERSION_EXTENDED_STRING = $"{LightningGL_VERSION_STRING} build {LightningGL_VERSION_BUILD}, built {DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")}";
+public static int LIGHTNING_VERSION_MAJOR = 1;
+public static int LIGHTNING_VERSION_MINOR = 0; 
+public static int LIGHTNING_VERSION_REVISION = 0;
+public static int LIGHTNING_VERSION_BUILD = (DateTime.UtcNow - new DateTime(2022, 02, 26)).Days;
+public static string LIGHTNING_VERSION_SPECIFIER = "alpha2";
+public static string LIGHTNING_VERSION_STRING = $"{LIGHTNING_VERSION_MAJOR}.{LIGHTNING_VERSION_MINOR}.{LIGHTNING_VERSION_REVISION}-{LIGHTNING_VERSION_SPECIFIER}";
+public static string LIGHTNING_VERSION_EXTENDED_STRING = $"{LIGHTNING_VERSION_STRING} build {LIGHTNING_VERSION_BUILD}, built {DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")}";
 
 #>
-
