--- a/AnimTool/Tools/AssemblyInfo.tt
+++ b/AnimTool/Tools/AssemblyInfo.tt
@@ -9,6 +9,7 @@
 <#@ import namespace="System.Runtime" #>
 <#@ import namespace="System.Text" #>
 <#@ output extension=".cs" #>
+
 // This file defines the version information - generated using the AssemblyInfo.tt T4 template in LightningBase.
 // Automatically generated file - do not modify
 using System.Reflection;
@@ -16,4 +17,4 @@ using System.Reflection;
 [assembly: AssemblyVersion("<#= LightningVersion.LIGHTNING_VERSION_MAJOR #>.<#= LightningVersion.LIGHTNING_VERSION_MINOR #>.<#= LightningVersion.LIGHTNING_VERSION_REVISION #>.<#= LightningVersion.LIGHTNING_VERSION_BUILD #>")]
 [assembly: AssemblyFileVersion("<#= LightningVersion.LIGHTNING_VERSION_MAJOR #>.<#= LightningVersion.LIGHTNING_VERSION_MINOR #>.<#= LightningVersion.LIGHTNING_VERSION_REVISION #>.<#= LightningVersion.LIGHTNING_VERSION_BUILD #>")]
 [assembly: AssemblyInformationalVersion("<#= LightningVersion.LIGHTNING_VERSION_EXTENDED_STRING #>")]
-[assembly: AssemblyTitle("Lightning Graphics Library")]
+[assembly: AssemblyTitle("Lightning Animation Editor SDK Tool")]
