--- a/LightningBase/Tools/AssemblyInfo.tt
+++ b/LightningBase/Tools/AssemblyInfo.tt
@@ -31,11 +31,11 @@ namespace LightningBase
 <#+
 
 public static int LIGHTNING_VERSION_MAJOR = 2;
-public static int LIGHTNING_VERSION_MINOR = 0; 
+public static int LIGHTNING_VERSION_MINOR = 5; 
 public static int LIGHTNING_VERSION_REVISION = 0;
 public static int LIGHTNING_VERSION_BUILD = (DateTime.UtcNow - new DateTime(2022, 02, 26)).Days;
 
-public static string LIGHTNING_VERSION_SPECIFIER = "-beta";
+public static string LIGHTNING_VERSION_SPECIFIER = "-alpha";
 public static string LIGHTNING_VERSION_STRING = $"{LIGHTNING_VERSION_MAJOR}.{LIGHTNING_VERSION_MINOR}.{LIGHTNING_VERSION_REVISION}{LIGHTNING_VERSION_SPECIFIER}";
 public static string LIGHTNING_VERSION_BUILD_STRING = $"{LIGHTNING_VERSION_MAJOR}.{LIGHTNING_VERSION_MINOR}.{LIGHTNING_VERSION_REVISION}.{LIGHTNING_VERSION_BUILD}";
 public static string LIGHTNING_VERSION_EXTENDED_STRING = $"{LIGHTNING_VERSION_STRING} build {LIGHTNING_VERSION_BUILD}, built {DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")}";
